--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,43 @@
 <header class="site-header">
-
+    <!--  <div class="bg"></div>  -->
   <div class="wrapper">
-
+ <ul>
+    <div>
+ <li><a href="index.html"><img src="http://i.imgur.com/azQFpzF.png" alt="Ntahoe.com"style="width:200px;height:80px;border:0;">
+   </a></li></div>
+    <!--
     <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+  -->
+    
+  <li><a href="#home">Today</a></li>
+  <li><a href="#news">Tonight</a></li>
+  <li class="dropdown">
+    <a href="#" class="dropbtn">Park</a>
+    <div class="dropdown-content">
+      <a href="#">Truckee</a>
+      <a href="#">Sacramento</a>
+      <a href="#">Reno</a>
+    </div>
+  </li>
+        <li class="dropdown">
+    <a href="#" class="dropbtn">Pricing</a>
+    <div class="dropdown-content">
+      <a href="#">Parking</a>
+      <a href="#">Services</a>
+    </div>
+  </li>
+        <li class="dropdown">
+    <a href="#" class="dropbtn">Concierge</a>
+    <div class="dropdown-content">
+      <a href="#">Today</a>
+      <a href="#">This Weekend</a>
+      <a href="#">Plan </a>
+    </div>
+  </li>
+</ul>
 
+    <!--
+    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
     <nav class="site-nav">
       <a href="#" class="menu-icon">
         <svg viewBox="0 0 18 15">
@@ -12,7 +46,6 @@
           <path fill="#424242" d="M18,13.516C18,14.335,17.335,15,16.516,15H1.484C0.665,15,0,14.335,0,13.516l0,0 c0-0.82,0.665-1.484,1.484-1.484h15.031C17.335,12.031,18,12.696,18,13.516L18,13.516z"/>
         </svg>
       </a>
-
       <div class="trigger">
         {% for page in site.pages %}
           {% if page.title %}
@@ -21,7 +54,7 @@
         {% endfor %}
       </div>
     </nav>
-
+-->
   </div>
-
+  
 </header>
