--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
   <div class="wrapper">
  <ul>
     <div>
- <li><a href="index.html"><img src="http://i.imgur.com/azQFpzF.png" alt="Ntahoe.com"style="width:200px;height:80px;border:0;">
+ <li><a href="index.html"><img src="http://i.imgur.com/WWWCEzz.png" alt="Ntahoe.com"style="width:150px;height:80px;border:0;">
    </a></li></div>
     <!--
     <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
