--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,11 +8,14 @@
       <div class="footer-col  footer-col-1">
         <ul class="contact-list">
           <li>{{ site.title }}</li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+          <li>Please contact us at <a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+          <li>TEXT "ASSIST" to 707-70-TESLA</li>
         </ul>
+        <blockquote> We are committed to customer service. Please chat with us on the link to the right for any reason. We are here to help.</blockquote>
       </div>
 
       <div class="footer-col  footer-col-2">
+        <p class="text"> On SOCIAL</p>
         <ul class="social-media-list">
           {% if site.github_username %}
           <li>
@@ -46,6 +49,12 @@
       </div>
 
       <div class="footer-col  footer-col-3">
+          <ul class="contact-list">
+          <li>LEARN MORE</li>
+          <li><a href="https://www.teampool.org/privacy/">PRIVACY</a></li>
+          <li><a href="https://www.teampool.org/terms-of-use/">TERMS OF USE</a></li>
+           <li>CODE OF CONDUCT</li>
+            </ul>
         <p class="text">{{ site.description }}</p>
       </div>
     </div>
