--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -20,11 +20,35 @@ body {
     font-weight: 300;
     color: $text-color;
     background-color: $background-color;
+    background-image: url(../IMG_20170115_230621_processed.filtered.jpg);
+    background-repeat: no-repeat;
+    background-position:top;
+    background-attachment: fixed;
+    background-origin: content-box;
+    padding: 75;
     -webkit-text-size-adjust: 100%;
 }
+/**
+ * adding parallax
+ */
+body, html {
+    height: 100%;
+}
 
+.parallax {
+    /* The image used */
+    background-image: url(../imgres.jpg);
 
+    /* Full height */
+    height: 100%; 
 
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: top left;
+    background-repeat: no-repeat;
+    background-size: cover;
+  
+}
 /**
  * Set `margin-bottom` to maintain vertical rhythm
  */
@@ -44,24 +68,108 @@ img {
     max-width: 100%;
     vertical-align: middle;
 }
-body, html {
-    height: 100%;
+
+* {
+    box-sizing: border-box;
+}
+
+/* Create three columns of equal width */
+.columns {
+    float: left;
+    width: 33.3%;
+    padding: 8px;
+}
+
+/* Style the list */
+.price {
+    list-style-type: none;
+    border: 1px solid #eee;
     margin: 0;
+    padding: 0;
+    -webkit-transition: 0.3s;
+    transition: 0.3s;
 }
 
-.bg {
-    /* The image used */
-    background-image: ('<a href="http://imgur.com/fpjfue0"><img src="http://i.imgur.com/fpjfue0.jpg" title="source: imgur.com" /></a>');
-
-    /* Full height */
-    height: 100%; 
-
-    /* Center and scale the image nicely */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+/* Add shadows on hover */
+.price:hover {
+    box-shadow: 0 8px 12px 0 rgba(0,0,0,0.2)
 }
 
+/* Pricing header */
+.price .header {
+    background-color: #111;
+    color: white;
+    font-size: 25px;
+}
+/* city for modal */
+.city {display:none}
+
+/* List items */
+.price li {
+    border-bottom: 1px solid #eee;
+    padding: 20px;
+    text-align: center;
+}
+
+/* Grey list item */
+.price .grey {
+    background-color: #eee;
+    font-size: 20px;
+}
+
+/* The "Sign Up" button */
+.button {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 10px 25px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 18px;
+}
+/* accordian for collapsible content */
+button.accordion {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    transition: 0.4s;
+}
+
+button.accordion.active, button.accordion:hover {
+    background-color: #ddd;
+}
+
+button.accordion:after {
+    content: '\002B';
+    color: #777;
+    font-weight: bold;
+    float: right;
+    margin-left: 5px;
+}
+
+button.accordion.active:after {
+    content: "\2212";
+}
+
+div.panel {
+    padding: 0 18px;
+    background-color: white;
+    max-height: 0;
+    overflow: hidden;
+}
+/* Change the width of the three columns to 100% 
+(to stack horizontally on small screens) */
+@media only screen and (max-width: 600px) {
+    .columns {
+        width: 100%;
+    }
+}
 
 /**
  * Figures
@@ -117,60 +225,29 @@ a {
         text-decoration: underline;
     }
 }
-
-
-/** this is where the drop down menus go
-* Drop Down Menues
+/**
+*cards
 */
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #ffffff;
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 40%;
+    border-radius: 5px;
 }
 
-li {
-    float: left;
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
-li a, .dropbtn {
-    display: inline-block;
-    color: black;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
+img {
+    border-radius: 5px 5px 0 0;
 }
 
-li a:hover, .dropdown:hover .dropbtn {
-    background-color: grey;
+.container {
+    padding: 2px 16px;
 }
 
-li.dropdown {
-    display: inline-block;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-}
-
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-}
-
-.dropdown-content a:hover {background-color: #f1f1f1}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
 /**
  * Blockquotes
  */
@@ -187,7 +264,36 @@ blockquote {
     }
 }
 
+/**
+* alerts
+*/
+.alert {
+    padding: 20px;
+    background-color: #f44336;
+    color: white;
+    opacity: 1;
+    transition: opacity 0.6s;
+    margin-bottom: 15px;
+}
 
+.alert.success {background-color: #4CAF50;}
+.alert.info {background-color: #2196F3;}
+.alert.warning {background-color: #ff9800;}
+
+.closebtn {
+    margin-left: 15px;
+    color: white;
+    font-weight: bold;
+    float: right;
+    font-size: 22px;
+    line-height: 20px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.closebtn:hover {
+    color: black;
+}
 
 /**
  * Code formatting
@@ -215,7 +321,23 @@ pre {
     }
 }
 
+/**
+* Responsive Table
+*/
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+    width: 100%;
+    border: 1px solid #ddd;
+}
 
+th, td {
+    border: none;
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(even){background-color: #f2f2f2}
 
 /**
  * Wrapper
@@ -252,7 +374,34 @@ pre {
 }
 
 
+/**
+* icon bar
+*/
+body {margin:0;}
 
+.icon-bar {
+    width: 100%;
+    text-align: center;
+    background-color: #555;
+    overflow: auto;
+}
+
+.icon-bar a {
+    width: 20%;
+    padding: 12px 0;
+    float: left;
+    transition: all 0.3s ease;
+    color: white;
+    font-size: 36px;
+}
+
+.icon-bar a:hover {
+    background-color: #000;
+}
+
+.active {
+    background-color: #4CAF50 !important;
+}
 /**
  * Icons
  */
