--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,43 +1,38 @@
 <header class="site-header">
-    <!--  <div class="bg"></div>  -->
+<!-- beginning of site-wide alert messages 
+<div class="alert">
+  <span class="closebtn">&times;</span>  
+  <strong>Danger!</strong> Indicates a dangerous or potentially negative action.
+</div>
+<div class="alert success">
+  <span class="closebtn">&times;</span>  
+  <strong>Success!</strong> Indicates a successful or positive action.
+</div>
+<div class="alert info">
+  <span class="closebtn">&times;</span>  
+  <strong>Info!</strong> Indicates a neutral informative change or action.
+</div>
+<div class="alert warning">
+  <span class="closebtn">&times;</span>  
+  <strong>Warning!</strong> Indicates a warning that might need attention.
+</div>
+  <script>
+var close = document.getElementsByClassName("closebtn");
+var i;
+for (i = 0; i < close.length; i++) {
+    close[i].onclick = function(){
+        var div = this.parentElement;
+        div.style.opacity = "0";
+        setTimeout(function(){ div.style.display = "none"; }, 600);
+    }
+}
+</script>
+   end of site wide of site-wide alert messages -->
   <div class="wrapper">
- <ul>
-    <div>
- <li><a href="index.html"><img src="http://i.imgur.com/WWWCEzz.png" alt="Ntahoe.com"style="width:150px;height:80px;border:0;">
-   </a></li></div>
-    <!--
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
-  -->
-    
-  <li><a href="#home">Today</a></li>
-  <li><a href="#news">Tonight</a></li>
-  <li class="dropdown">
-    <a href="#" class="dropbtn">Park</a>
-    <div class="dropdown-content">
-      <a href="#">Truckee</a>
-      <a href="#">Sacramento</a>
-      <a href="#">Reno</a>
-    </div>
-  </li>
-        <li class="dropdown">
-    <a href="#" class="dropbtn">Pricing</a>
-    <div class="dropdown-content">
-      <a href="#">Parking</a>
-      <a href="#">Services</a>
-    </div>
-  </li>
-        <li class="dropdown">
-    <a href="#" class="dropbtn">Concierge</a>
-    <div class="dropdown-content">
-      <a href="#">Today</a>
-      <a href="#">This Weekend</a>
-      <a href="#">Plan </a>
-    </div>
-  </li>
-</ul>
 
-    <!--
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+   <!-- <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a> dont show this now -->
+  <a href="/index.html"><img src="http://i.imgur.com/524BhyY.png" alt="ntahoe"style="width:300px;height:130px;border:0;">
+</a>
     <nav class="site-nav">
       <a href="#" class="menu-icon">
         <svg viewBox="0 0 18 15">
@@ -46,6 +41,7 @@
           <path fill="#424242" d="M18,13.516C18,14.335,17.335,15,16.516,15H1.484C0.665,15,0,14.335,0,13.516l0,0 c0-0.82,0.665-1.484,1.484-1.484h15.031C17.335,12.031,18,12.696,18,13.516L18,13.516z"/>
         </svg>
       </a>
+
       <div class="trigger">
         {% for page in site.pages %}
           {% if page.title %}
@@ -54,7 +50,7 @@
         {% endfor %}
       </div>
     </nav>
--->
+
   </div>
-  
+
 </header>
